Refactoring: all code was adjusted to standard.